--- a/app/views/share/_items_given_taken.html.erb
+++ b/app/views/share/_items_given_taken.html.erb
@@ -1,24 +1,24 @@
 <ul class="item-collection">
-  <% for itemType in itemTypes do %>
+  <% @itemtypes.each_with_index do |itemType, index| %>
     <li>
-      <% i = eval "resources.#{itemType.title.downcase}" %>
+      <% i = eval "resources.#{itemType.downcase}" %>
       <% if @itemable %>				
         <% if i.size.to_i == 1 %>
-		      <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe, 
-		          i.first
-		      %>
-				<% else %>
-		      <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe, 
-		          polymorphic_path([@itemable, :items],
-								"q[item_type_id_eq]" => itemType.id, 
-								"q[accounts_accountable_id_eq]" => @itemable.id,
-								"q[accounts_accountable_type_eq]" => @itemable.class.to_s, 
-								"q[accounts_has_taken_eq]" => taken
-							)
-		      %>
-				<% end %>
+	      <%= link_to image_tag(("icons/icon_" + itemType).downcase + ".png") + t( itemType.downcase, :count => i.size ).html_safe, 
+	          i.first
+	      %>
+		<% else %>
+	      <%= link_to image_tag(("icons/icon_" + itemType).downcase + ".png") + t( itemType.downcase, :count => i.size ).html_safe, 
+	          polymorphic_path([@itemable, :items],
+							"q[item_type_id_eq]" => index + 1, 
+							"q[accounts_accountable_id_eq]" => @itemable.id,
+							"q[accounts_accountable_type_eq]" => @itemable.class.to_s, 
+							"q[accounts_has_taken_eq]" => taken
+						)
+	      %>
+		<% end %>
       <% else %>
-        <%= image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe %>
+        <%= image_tag(("icons/icon_" + itemType).downcase + ".png") + t( itemType.downcase, :count => i.size ).html_safe %>
       <% end %>
     </li>
   <% end %>
