--- a/app/views/items/_itemmenu.html.erb
+++ b/app/views/items/_itemmenu.html.erb
@@ -1,8 +1,8 @@
 <% if logged_in? %>
   <ul class="font-smaller horizontal">
   <% if current_user == item.creator %>
-    <li class="button"><%= link_to t("edit").html_safe, edit_polymorphic_path([@user, item]) %></li>
-    <li class="button"><%= link_to t("delete").html_safe, polymorphic_path([@user, item]),
+    <li class="button"><%= link_to t("edit").html_safe, edit_polymorphic_path([current_user, item]) %></li>
+    <li class="button"><%= link_to t("delete").html_safe, polymorphic_path([current_user, item]),
           :confirm => t("confirm_delete").html_safe,
           :method => :delete %>
     </li>
