--- a/app/views/share/userarea/_profileusermenu.html.erb
+++ b/app/views/share/userarea/_profileusermenu.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? and user.login != current_user.login %>
   <ul class="font-smaller horizontal">
-    <li class="button">
-      <%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user), :remote => true, :id => "send_message" %>
+    <li class="button message button-small">
+      <%= link_to t("menu.user.sendMessage"), new_sent_path(:to => user), remote: true, id: "send_message" %>
     </li>
     <%= render partial: "share/social/followbuttons", :locals => { user: current_user, model: user } %>
     <%= render partial: "share/social/likebuttons", :locals => { user: current_user, model: user } %>
