--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,19 +12,7 @@
 
 <% if user_signed_in? and @user == current_user %>
 	<%= render :partial => "register_completion" if current_user.confirmed_at == nil %>
-	<ul class="horizontal">
-		<li class="edit button">    
-			<%= link_to t("userarea.edit.profile").html_safe, edit_polymorphic_path([@user, "userdetails"]) %>
-		</li>
-<!--
-		<li class="button invite">    
-			<%= link_to t("menu.user.invite"), new_user_invitation_path(@user) %>
-  	</li>
--->
-    <li class="button preferences">    
-			<%= link_to t("menu.user.preferences"), edit_user_path(@user) %>
-  	</li>
-	</ul>
+  <%= render :partial => "share/userarea/profileownermenu", :locals => { :user => @user } %>
 <% else %>
   <%= render :partial => "share/userarea/profileusermenu", :locals => { :user => @user } %>
   <div class="clearfix"></div>
