--- a/app/views/pings/_form.html.erb
+++ b/app/views/pings/_form.html.erb
@@ -34,7 +34,7 @@
     <%= f.text_area :body, :class => "ui-corner-all" %>
   </p>
   <p>
-    <%= f.submit @ping_submit, :class => "ui-corner-all", :id => "ping_submit" %>
+    <%= f.submit @ping_submit, :class => "ui-corner-all button", :id => "ping_submit" %>
   </p>
 <% end %>
 </div>
