--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -86,6 +86,6 @@
     </div>
   </div>
   <%= f.actions do %>
-    <%= f.action :submit, :label => t("save").html_safe, :button_html => { :id => "group-save" } %>
+    <%= f.submit t("save").html_safe, id: "group-save", class: "button" %>
   <% end %>
 <% end %>
