--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -124,7 +124,7 @@
 		</div>
   </div>
   <%= f.actions do %>
-    <%= f.submit t("save") %>
+    <%= f.submit t("save"), class: "button" %>
   <% end %>
   </div>
 <% end %>
