fixed following_users in meetupform

--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -78,7 +78,7 @@
     </div>
     <%= f.actions do %>
       <br />
-      <%= f.submit, t("save").html_safe, class: "button" %>
+      <%= f.submit t("save").html_safe, class: "button" %>
     <% end %>
   <% end %>
 
@@ -131,7 +131,7 @@
     </div>
     <%= f.actions do %>
       <br />
-    <%= f.submit, t("save").html_safe, class: "button" %>
+    <%= f.submit t("save").html_safe, class: "button" %>
     <% end %>
   <% end %>
 
